2005-01-14  Christian Hergert <chris@mosaix.net>

	* Commands/FileCommands.cs: Added a Close All menu item.
	* Gui/Dialogs/CommonAboutDialog.cs: Added Christian to authors array.
	* MonoDevelopCore.addin.xml: Removed Close Solution shortcut. Added Close File
	shortcut.

2005-01-14  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am, AbstractProject.cs, Project.cs: Renamed AbstractProject.cs.
	* Internal/Project/ProjectPathItemPropertyAttribute.cs: Ignore empty paths.

2005-01-13  Todd Berman  <tberman@off.net>

	* Internal/Project/Project/AbstractProject.cs: Actually start the
	Execute Script.

2005-01-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/Project/DefaultProjectService.cs: Added support for custom
	file formats and project types.
	
	* Gui/Dialogs/OptionPanels/ProjectOptions/OutputOptionsPanel.cs:
	* Base.glade: Moved here the OutputOptionsPanel dialog from the c#
	binding.
	
	* Internal/Codons/LanguageBinding/ILanguageBinding.cs: Moved some methods
	to the new IProjectBinding interface, since they are language independent.
	Actually, ILanguageBinding is now a "dot net language binding". Support for
	non-.net languages should be implemented by extending IProjectBinding.
	
	* Internal/Project/Project/AbstractProjectConfiguration.cs: Moved some
	properties to the new DotNetProjectConfiguration, and added some others
	from the language bindings.
	
	* Internal/Project/Project/AbstractProject.cs: The IProject interface
	is not used anymore. All serialization code has been removed and
	reimplemented in PrjxFileFormat. Some methods have been moved to the
	new base class CombineEntry, and some others to the DotNetProject
	subclass.
	
	* Internal/Project/Combine/Combine.cs: It is now a subclass of
	CombineEntry. All serialization code has been removed and
	reimplemented in CmbxFileFormat. The class interface has been simplified.
	
	* Internal/Project/Combine/CombineEntry.cs: It is now the base class